--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "leaflet": "^0.7.7",
     "leaflet.label": "Leaflet/Leaflet.label#0.2.1",
     "mocha": "^2.1.0",
+    "moment": "^2.13.0",
     "postcss-calc": "^5.0.0",
     "postcss-import": "^7.1.0",
     "precss": "^1.3.0",
